--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,30 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: Jira Create and Update Issue
+description: Create a new Jira issue
+branding:
+  icon: "check-square"
+  color: "blue"
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  project:
+    description: Key of the project
     required: true
-    default: '1000'
+  issuetype:
+    description: "Type of the issue to be created. Example: 'Incident'"
+    required: true
+  summary:
+    description: Issue summary
+    required: true
+  description:
+    description: Issue description
+    required: false
+  labels:
+    description: Issue labels
+    required: false
+  fields:
+    description: Additional fields in JSON format
+    required: false
 outputs:
-  time: # output will be available to future steps
-    description: 'The current time after waiting'
+  issue:
+    description: Key of the newly created issue
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: "node16"
+  main: "./dist/index.js"
