--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
-  "name": "javascript-action",
-  "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "name": "@tungtt22/jira-create-issue",
+  "version": "3.0.1",
+  "description": "Creates a Jira issue within Github Actions",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
-    "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
+    "prepare": "husky install",
+    "build": "ncc build index.js -s",
+    "start": "ncc build index.js -w",
+    "test": "jest __tests__",
+    "lint": "eslint",
+		"precommit": "run-p lint test build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
-  },
-  "keywords": [
-    "GitHub",
-    "Actions",
-    "JavaScript"
-  ],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
-  },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "author": "Tung Tran Thanh <github@tungtt22.>",
+  "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "lodash": "^4.17.21",
+    "node-fetch": "^2.6.7",
+    "require-directory": "^2.1.1",
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.0.0",
-    "jest": "^27.2.5"
+    "@vercel/ncc": "^0.34.0",
+    "eslint": "^8.27.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "jest-junit": "^14.0.1",
+    "nock": "^13.2.9",
+    "npm-run-all": "^4.1.5"
   }
 }
