--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,9 @@ inputs:
   labels:
     description: Issue labels
     required: false
+  attachments:
+    description: Issue attachments
+    required: false
   fields:
     description: Additional fields in JSON format
     required: false
