--- a/action.yml
+++ b/action.yml
@@ -13,11 +13,21 @@ inputs:
   summary:
     description: Issue summary
     required: true
+  newIssue:
+    description: Create new issue
+    required: false
+    default: "false"
+  comment:
+    description: Comment
+    required: false
   description:
     description: Issue description
     required: false
   labels:
     description: Issue labels
+    required: false
+  attachments:
+    description: Issue attachments and separate by commar, example ./report.json,./lerna.json
     required: false
   fields:
     description: Additional fields in JSON format
