--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "@tungtt22/jira-create-issue",
-  "version": "3.0.1",
-  "description": "Creates a Jira issue within Github Actions",
-  "main": "index.js",
-  "scripts": {
-    "prepare": "husky install",
-    "build": "ncc build index.js -s",
-    "start": "ncc build index.js -w",
-    "test": "jest __tests__",
-    "lint": "eslint",
+	"name": "@tungtt22/jira-create-issue",
+	"version": "3.0.1",
+	"description": "Creates a Jira issue within Github Actions",
+	"main": "index.js",
+	"scripts": {
+		"build": "ncc build index.js -s",
+		"start": "ncc build index.js -w",
+		"local": "node __tests__/index.js",
+		"test": "jest __tests__",
+		"lint": "eslint",
 		"precommit": "run-p lint test build"
-  },
-  "author": "Tung Tran Thanh <github@tungtt22.>",
-  "license": "ISC",
-  "dependencies": {
-    "@actions/core": "^1.10.0",
-    "lodash": "^4.17.21",
-    "node-fetch": "^2.6.7",
-    "require-directory": "^2.1.1",
-    "yaml": "^2.1.3"
-  },
-  "devDependencies": {
-    "@vercel/ncc": "^0.34.0",
-    "eslint": "^8.27.0",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "jest-junit": "^14.0.1",
-    "nock": "^13.2.9",
-    "npm-run-all": "^4.1.5"
-  }
+	},
+	"author": "Tung Tran Thanh <github@tungtt22.>",
+	"license": "ISC",
+	"dependencies": {
+		"@actions/core": "^1.10.0",
+		"axios": "^1.3.2",
+		"form-data": "^4.0.0",
+		"lodash": "^4.17.21",
+		"node-fetch": "^2.6.7",
+		"path": "^0.12.7",
+		"require-directory": "^2.1.1",
+		"yaml": "^2.1.3"
+	},
+	"devDependencies": {
+		"@vercel/ncc": "^0.34.0",
+		"eslint": "^8.27.0",
+		"husky": "^8.0.2",
+		"jest": "^29.3.1",
+		"jest-junit": "^14.0.1",
+		"nock": "^13.2.9",
+		"npm-run-all": "^4.1.5"
+	}
 }
